// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoadingScreen when just made not visible 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen loading-finished"
      data-testid="loading-screen-div"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <span
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
          <h5
            class="pf-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-2"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when not visible after fadeout delay 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen loading-finished"
      data-testid="loading-screen-div"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <span
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
          <h5
            class="pf-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-3"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LoadingScreen when visible 1`] = `
<div>
  <div
    class="kie-tools--loading-screen"
    id="loading-screen"
  >
    <div
      class="kie-tools--loading-screen "
      data-testid="loading-screen-div"
    >
      <div
        class="pf-l-bullseye"
      >
        <div
          class="kie-tools--loading-screen-spinner"
        >
          <div>
            <span
              aria-label="Contents"
              aria-valuetext="Loading..."
              class="pf-c-spinner pf-m-xl"
              role="progressbar"
            >
              <span
                class="pf-c-spinner__clipper"
              />
              <span
                class="pf-c-spinner__lead-ball"
              />
              <span
                class="pf-c-spinner__tail-ball"
              />
            </span>
          </div>
          <h5
            class="pf-c-title pf-m-md"
            data-ouia-component-id="OUIA-Generated-Title-1"
            data-ouia-component-type="PF4/Title"
            data-ouia-safe="true"
          >
            Loading...
          </h5>
        </div>
      </div>
    </div>
  </div>
</div>
`;
